<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Battle Doctor</string>
    <string name="head">Head</string>
    <string name="chest">Chest</string>
    <string name="left_shoulder">Left shoulder</string>
    <string name="right_shoulder">Right shoulder</string>
    <string name="left_forearm">Left forearm</string>
    <string name="right_forearm">Right forearm</string>
    <string name="heart">Heart</string>
    <string name="righ_lung">Right lung</string>
    <string name="left_arm">Left arm</string>
    <string name="right_arm">Right arm</string>
    <string name="left_stomach">Reft stomach</string>
    <string name="right_stomach">Right stomach</string>
    <string name="left_leg">Left leg</string>
    <string name="right_leg">Right leg</string>
    <string name="left_knee">Left knee</string>
    <string name="right_knee">Right knee</string>
    <string name="left_shin">Left shin</string>
    <string name="right_shin">Right shin</string>
    <string name="left_foot">Left foot</string>
    <string name="right_foot">Right foot</string>

    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="visit_settings">Visit settings</string>

    <string name="licence_agreement">License agreement</string>
    <string name="licence_agreement_text">License agreement text</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="preferences">Preferences</string>

    <string name="app_preference">Application preference</string>
    <string name="show_licence_agreement">Show license agreement</string>
    <string name="show_licence_agreement_summary">Check to show license agreement on app starts</string>
    <string name="display_licence_agreement">Display license agreement</string>
    <string name="display_licence_agreement_summary">Click to display license agreement</string>
    <string name="support">Support</string>
    <string name="app_version">Application version</string>
    <string name="app_version_summary">1.0.3</string>
    <string name="mail_me">Mail me</string>
    <string name="mail_me_summary">Write you wish to developer</string>
    <string name="rate_me">Rate me</string>
    <string name="rate_me_summary">Rate the app on Google Play</string>
    <string name="about">About</string>
    <string name="developer">Developer</string>
    <string name="maxim_lazarenko">Maxim Lazarenko, Ukraine</string>

    <string name="exit">Exit</string>
    <string name="rate_app_please">Rate the application on Google Play Market</string>
    <string name="rate">Rate</string>
</resources>
